# pyFresco

./: .gitignore  ADWA_potentials.py  README.md  myomps.ods  plot_fresco.py  pyfresco.py  pyproject.toml  reaction_config.json
OGScripts/: LabtoCM.py  autoFit.py  getFresco_output.py  lmfit_chi_squared.py  merge.py  pyfrescoOG.py
config/: reaction_config.json
inputs/: input_generator.inp
old_configs/: reaction_config.json  reaction_config_nested.json
scripts/: AllowedLGui.py  RunPyfresco.py
src/angmom_tool/: Formatting.py  Presets.py  QTPiGUI.py  SelectionRules.py
src/pyfresco/: config.py  config_loader.py  fresco_runner.py  input_parser.py  input_writer.py  logger.py  omps.py  output_parser.py  pyfresco.py
src/pyfresco/card_builders/: adwa.py  dwba.py
